force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Left_Over_Depreciation_Value__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Left_Over_Depreciation_Value__c</fullName>
    <description>Internal field. Used to reduce the number of records for batch processing as we cannot dynamically check the book value is less than or equal to salvage value.</description>
    <formula>if(ISPICKVAL( clcommon__Warehouse_Depreciation_Setup__r.clcommon__Depreciation_Method__c,&apos;STL&apos;),(clcommon__Equipment_NBV__c  -  clcommon__Salvage_Value__c), clcommon__Equipment_NBV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Left Over Depreciation Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>