force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Length_in_Feet__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Length_in_Feet__c</fullName>
    <description>To capture the length in Feet</description>
    <label>Length in Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>