force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Letter_of_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Letter_of_Credit_Date__c</fullName>
    <label>Letter of Credit Date</label>
    <type>Date</type>
</CustomField>