force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Lien_Holder__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Lien_Holder__c</fullName>
    <description>To capture the Lien holder name.</description>
    <label>Lien Holder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>