force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Lien_Position__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Lien_Position__c</fullName>
    <description>Select the lender&apos;s lien position on the collateral.</description>
    <inlineHelpText>Select the lender&apos;s lien position on the collateral.</inlineHelpText>
    <label>Lien Position</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>