force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Life_Insurance_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Life_Insurance_Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the name of the beneficiary of the Life Insurance. This is an Account Lookup.</description>
    <inlineHelpText>This field will store the name of the beneficiary of the Life Insurance. This is an Account Lookup.</inlineHelpText>
    <label>Life Insurance Beneficiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>