force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Life_Insurance_Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Life_Insurance_Beneficiary_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will store the name of the beneficiary of the Life Insurance. This is an Account Lookup.</description>
    <inlineHelpText>This field will store the name of the beneficiary of the Life Insurance. This is an Account Lookup.</inlineHelpText>
    <label>Life Insurance Beneficiary Name</label>
    <type>Checkbox</type>
</CustomField>