force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Located_in_Flood_Area__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Located_in_Flood_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the secured property is located in a special flood hazard area.</description>
    <inlineHelpText>Indicate if the secured property is located in a special flood hazard area.</inlineHelpText>
    <label>Located in Flood Area</label>
    <type>Checkbox</type>
</CustomField>