force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Lot__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Lot__c</fullName>
    <label>Lot</label>
    <length>150</length>
    <type>Text</type>
</CustomField>