force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Make__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Make__c</fullName>
    <label>Make</label>
    <length>80</length>
    <type>Text</type>
</CustomField>