force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Manufactured_Home__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Manufactured_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manufactured Home</label>
    <type>Checkbox</type>
</CustomField>