force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>150</length>
    <type>Text</type>
</CustomField>