force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Market_Value_Limit__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Market_Value_Limit__c</fullName>
    <label>Market Value Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>