force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Master_Equipment__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Master_Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the Id of parent equipment for current equipment.</description>
    <label>Master Equipment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clcommon__Collateral__c.clcommon__Collateral_Category__r.Name</field>
            <operation>equals</operation>
            <value>Lease Category</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clcommon__Collateral__c</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Child_Equipments</relationshipName>
    <type>Lookup</type>
</CustomField>