force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Model__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Model__c</fullName>
    <label>Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>