force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Motor_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Motor_Type__c</fullName>
    <description>To capture the motor type.</description>
    <label>Motor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outboard</fullName>
            </value>
            <value>
                <fullName>Inboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>