force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Name_of_Vessel__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Name_of_Vessel__c</fullName>
    <label>Name of Vessel</label>
    <length>150</length>
    <type>Text</type>
</CustomField>