force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Net_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Net_Tonnage__c</fullName>
    <label>Net Tonnage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>