force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Next_Depreciation_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Next_Depreciation_Date__c</fullName>
    <description>Generally an equipment can be depreciated at the warehouse level and this field will be used to store the date on which the depreciation can happen</description>
    <label>Next Depreciation Date</label>
    <type>Date</type>
</CustomField>