force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Number_of_Axles__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Number_of_Axles__c</fullName>
    <description>To capture the total number of axles.</description>
    <label>Number of Axles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>