force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Number_of_Motors__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Number_of_Motors__c</fullName>
    <description>To capture the number of motors.</description>
    <label>Number of Motors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>