force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Number_of_Shares__c</fullName>
    <label>Number of Shares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>