force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Owner_Occupied__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Owner_Occupied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Occupied</label>
    <type>Checkbox</type>
</CustomField>