force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Owners_Interest__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Owners_Interest__c</fullName>
    <label>Owners Interest</label>
    <length>150</length>
    <type>Text</type>
</CustomField>