force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Parcel_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Parcel_Number__c</fullName>
    <label>Parcel Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>