force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Policy_Return_Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Policy_Return_Address__c</fullName>
    <label>Policy Return Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>