force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Port_Name__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Port_Name__c</fullName>
    <label>Port Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>