force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Possessory_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Possessory_Current_Balance__c</fullName>
    <label>Possessory Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>