force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Possessory_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Possessory_Type__c</fullName>
    <label>Possessory Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Accounts</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Warehouse Receipts</fullName>
            </value>
            <value>
                <fullName>Bills of Lading</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Revocable Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Irrevocable Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Whole Life</fullName>
            </value>
            <value>
                <fullName>Term Life</fullName>
            </value>
            <value>
                <fullName>Credit Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>