force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>