force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Postal_Code_Last_4__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Postal_Code_Last_4__c</fullName>
    <description>The last 4 digits or delivery route information of the postal code for example the last 4 digits of the US zip code.</description>
    <inlineHelpText>Last 4 digits or delivery route information of the postal code</inlineHelpText>
    <label>Postal Code - Last 4</label>
    <length>18</length>
    <type>Text</type>
</CustomField>