force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Principal_Dwelling__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Principal_Dwelling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal Dwelling</label>
    <type>Checkbox</type>
</CustomField>