force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Block_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Block_Number__c</fullName>
    <description>The block number for the real estate property.</description>
    <inlineHelpText>Block number for the real estate property</inlineHelpText>
    <label>Property Block Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>