force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_County__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_County__c</fullName>
    <description>The county name for the real estate property.</description>
    <inlineHelpText>County name for the real estate property</inlineHelpText>
    <label>Property County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>