force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Legal_Description__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Legal_Description__c</fullName>
    <description>Any other legal description for the real estate property.</description>
    <inlineHelpText>Any other legal description for the real estate property</inlineHelpText>
    <label>Property Legal Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>