force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Lot_Number__c</fullName>
    <description>The lot number for the real estate property</description>
    <inlineHelpText>Lot number for the real estate property</inlineHelpText>
    <label>Property Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>