force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Metro_Division__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Metro_Division__c</fullName>
    <description>The metro division for the metro statistical area for the real estate property.</description>
    <inlineHelpText>Metro division for the metro statistical area for the real estate property.</inlineHelpText>
    <label>Property Metro Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>