force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Metro_Statistical_Area__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Metro_Statistical_Area__c</fullName>
    <description>The metropolitan statistical area for the real estate property.</description>
    <inlineHelpText>The metropolitan statistical area for the real estate property</inlineHelpText>
    <label>Property Metro Statistical Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>