force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Parcel_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Parcel_Number__c</fullName>
    <description>The parcel number for the real estate property.</description>
    <inlineHelpText>Parcel number for the real estate property</inlineHelpText>
    <label>Property Parcel Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>