force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Range__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Range__c</fullName>
    <label>Property Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>