force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Section__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Section__c</fullName>
    <description>The property section for the real estate property.</description>
    <inlineHelpText>Property section for the real estate property</inlineHelpText>
    <label>Property Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>