force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Subdivision__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Subdivision__c</fullName>
    <description>The subdivision number for the property.</description>
    <inlineHelpText>Subdivision number for the property</inlineHelpText>
    <label>Property Subdivision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>