force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Subdivision_Phase__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Subdivision_Phase__c</fullName>
    <description>The subdivision phase for the real estate property.</description>
    <inlineHelpText>Subdivision phase for the real estate property</inlineHelpText>
    <label>Property Subdivision Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>