force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Tax_ID_Number__c</fullName>
    <label>Property Tax ID Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>