force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Township__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Township__c</fullName>
    <description>The township in which the real estate property is situated.</description>
    <inlineHelpText>Township in which the real estate property is situated</inlineHelpText>
    <label>Property Township</label>
    <length>255</length>
    <type>Text</type>
</CustomField>