force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential Dwelling</fullName>
            </value>
            <value>
                <fullName>Residential Vacant Land</fullName>
            </value>
            <value>
                <fullName>Residential Unit</fullName>
            </value>
            <value>
                <fullName>Serviced/Managed apartment</fullName>
            </value>
            <value>
                <fullName>Retail Shop</fullName>
            </value>
            <value>
                <fullName>Commercial Office</fullName>
            </value>
            <value>
                <fullName>Industrial Unit</fullName>
            </value>
            <value>
                <fullName>Commercial Vacant Land</fullName>
            </value>
            <value>
                <fullName>Rural Residential</fullName>
            </value>
            <value>
                <fullName>Rural(&gt;100acres)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>