force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Unit_Number__c</fullName>
    <description>The unit number for the real estate property.</description>
    <inlineHelpText>Unit number for the real estate property</inlineHelpText>
    <label>Property Unit Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>