force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Prorated_Depreciation_Balance__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Prorated_Depreciation_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Internal field used to keep track of the pro rated depreciation value to populate correct depreciation stream</description>
    <label>Prorated Depreciation Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>