force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__PUD__c.field-meta.xml
<CustomField>
    <fullName>clcommon__PUD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will indicate if the property is a planned unit development</description>
    <inlineHelpText>This checkbox will indicate if the property is a planned unit development</inlineHelpText>
    <label>Planned Unit Development</label>
    <type>Checkbox</type>
</CustomField>