force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Purchase_Money__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Purchase_Money__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Money</label>
    <type>Checkbox</type>
</CustomField>