force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Purchase_Name__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Purchase_Name__c</fullName>
    <description>To capture the purchase name</description>
    <label>Purchase Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>