force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Purchased_Date__c</fullName>
    <description>Used to store the date on which the equipment is purchased.</description>
    <label>Purchased Date</label>
    <type>Date</type>
</CustomField>