force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Purchased_Price__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Purchased_Price__c</fullName>
    <description>Used to store invoiced price of an equipment</description>
    <label>Purchased Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>