force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Purchasing_From__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Purchasing_From__c</fullName>
    <description>Picklist to know whether Dealer or Individual.</description>
    <label>Purchasing From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>