force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Quantity__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Signifies the quantity of Collaterals</description>
    <inlineHelpText>Signifies the quantity of Collaterals to be assigned.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>