force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Range__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Range__c</fullName>
    <label>Range</label>
    <length>150</length>
    <type>Text</type>
</CustomField>