force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Record_Financial_Statement__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Record_Financial_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Financial Statement</label>
    <type>Checkbox</type>
</CustomField>