force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Refinance__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Refinance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refinance</label>
    <type>Checkbox</type>
</CustomField>