force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Residential_Property__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Residential_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residential Property</label>
    <type>Checkbox</type>
</CustomField>