force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Restriction_on_Sale__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Restriction_on_Sale__c</fullName>
    <label>Restriction on Sale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>