force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__RV_Body_Style__c.field-meta.xml
<CustomField>
    <fullName>clcommon__RV_Body_Style__c</fullName>
    <description>To capture the Recreational Vehicle body style.</description>
    <label>RV Body/Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Camping Trailer</fullName>
            </value>
            <value>
                <fullName>Class A Motor Home,</fullName>
            </value>
            <value>
                <fullName>Class C Motor Home</fullName>
            </value>
            <value>
                <fullName>Fifth Wheel</fullName>
            </value>
            <value>
                <fullName>Travel Trailer</fullName>
            </value>
            <value>
                <fullName>Truck Camper</fullName>
            </value>
            <value>
                <fullName>Vacuum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>