force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Salvage_Value__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Salvage_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value below which equipment cannot be leased</description>
    <label>Salvage Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>