force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Section__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Section__c</fullName>
    <label>Section</label>
    <length>150</length>
    <type>Text</type>
</CustomField>