force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Secure_Future_Advances__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Secure_Future_Advances__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secure Future Advances</label>
    <type>Checkbox</type>
</CustomField>