force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Secured_By_Interest_In_Property__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Secured_By_Interest_In_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secured By Interest In Property</label>
    <type>Checkbox</type>
</CustomField>