force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Seller_Financed_Transaction__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Seller_Financed_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seller Financed Transaction</label>
    <type>Checkbox</type>
</CustomField>