force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Status__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Established</fullName>
            </value>
            <value>
                <fullName>New Building</fullName>
            </value>
            <value>
                <fullName>Off the Plan</fullName>
            </value>
            <value>
                <fullName>Vacant Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>