force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Style__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Style__c</fullName>
    <label>Body / Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>