force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Subvention__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Subvention__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Subvention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>