force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Timeshare__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Timeshare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timeshare</label>
    <type>Checkbox</type>
</CustomField>